--- a/src/main/resources/assets/wurgegriff/lang/en_us.json
+++ b/src/main/resources/assets/wurgegriff/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.wurgegriff.magic_wand": "Magic Wand"
+  "item.wurgegriff.magic_wand": "Magic Wand",
+  "item.wurgegriff.pink_garnet": "Pink Garnet",
+  "item.wurgegriff.pink_garnet_raw": "Pink Garnet Ore"
 }
