--- a/src/main/resources/assets/wurgegriff/lang/en_us.json
+++ b/src/main/resources/assets/wurgegriff/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.wurgegriff.pink_garnet": "Pink Garnet",
   "item.wurgegriff.pink_garnet_raw": "Pink Garnet Ore",
 
-  "block.wurgegriff.pink_garnet_block": "Pink Garnet Block"
+  "block.wurgegriff.pink_garnet_block": "Block of Pink Garnet",
+  "block.wurgegriff.pink_garnet_raw_block": "Block of Raw Pink Garnet"
 }
